S3-UC3-UC4 : Created application properties for logging pattern and set the environment variable fot DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,2 @@
 server.port=8081
-
-# Logging setup
-logging.level.root=Info
-logging.file.name=application.log
-
-logging.pattern.console=%d{dd-MM-yyyy HH:mm}[%level][%thread] [%logger{6}:%line] %msg%n
-logging.pattern.file=%d{dd-MM-yyyy HH:mm}[%level][%thread] [%logger{6}:%line] %msg%n
+spring.profiles.active=dev
