--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 server.port=8081
 spring.profiles.active=dev
+
+#Database setup
+spring.datasource.url=jdbc:mysql://localhost:3306/addressbook_service
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=${DB_userName}
+spring.datasource.password=${DB_pwd}
+
+spring.jpa.hibernate.ddl-auto=update
