--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.profiles.active=dev
 #Database setup
 spring.datasource.url=jdbc:mysql://localhost:3306/addressbook_service
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=${DB_userName}
-spring.datasource.password=${DB_pwd}
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
